# ElfZoo

./: .gitignore  .gitmodules  Cargo.toml  README.md  analyze-elfs.sh  analyze-packages.sh  analyze-programs.sh  describe.sh  elflint.sh  extract.sh  fetch.sh  resolve.sh
audit/: audit.c
docs/: anomalies.html  categories.html  depgraph.html  dynamic.html  hardening.html  index.html  needed.html  packages.html  program.html  relocations.html
experiments/: audit.c
scripts/: audit_run.py  build_site.py  dep_graph.py  dump.py  elflint_run.py  fetch.sh  reltrace.py  survey.py  sysroot.py  unpack.sh
site/: elflint.html  header.html  notes.html  style.css  symbols.html
src/: cmd_describe.rs  cmd_extract.rs  cmd_resolve.rs  elf.rs  main.rs  output.rs  paths.rs  walk.rs
src/cmd/: analyze.rs  analyze_elfs.rs  analyze_packages.rs  analyze_programs.rs  elflint.rs  extract.rs  fetch.rs  mod.rs
