[package]
name = "elfzoo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1.1.9"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4.46"
tempfile = "3"
wait-timeout = "0.2"
walkdir = "2"
